--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.5",
     "pg": "^8.3.3",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "nodemon src/index.js",
     "db:seed": "node ./database/seed-database.js",
     "express": "nodemon src/index.js"
   },
