cha cha changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,30 @@
 version: "3.8"
+
+x-env-vars: &env-vars
+  - DATABASE_URL
+  - SERVER_PORT
+  - POSTGRES_PASSWORD
+  - POSTGRESS_DATABASE
+  - POSTGRES_USERNAME
+  - POSTGRES_PORT
+
 services:
   roa-postgres:
-    environment:
-      - POSTGRES_PASSWORD
-      - SERVER_PORT
+    environment: *env-vars
     build:
       context: ./
       dockerfile: Dockerfile-postgres
     ports:
       - "5432:5432"
   roa-express:
+    environment: *env-vars
     build:
       context: ./
       dockerfile: Dockerfile-express
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
   roa-bootstrapping:
+    environment: *env-vars
     depends_on:
       - roa-postgres
       - roa-express
