--- a/heroku.yml
+++ b/heroku.yml
@@ -4,9 +4,9 @@ setup:
       as: DATABASE
 build:
   docker:
-    express: Dockerfile.express
+    web: Dockerfile.express
   config:
     NODE_ENV: production
 run:
-  express: npm run start
+  web: npm run start
 
