--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       context: ./
       dockerfile: Dockerfile.express
     ports:
-      - "${SERVER_PORT}:${SERVER_PORT}"
+      - "${PORT}:${PORT}"
   roa-bootstrapping:
     env_file: .env
     depends_on:
